Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
Windows 7, msvc 2010
-
400c865f2994e67189108e36cfa206c365d57274
Description
Windows: QWindow autotest fails:
FAIL! : tst_QWindow::positioning() Compared values are not the same
Actual (window.received(QEvent::Resize)): 2
Expected (3): 3
.\tst_qwindow.cpp(147) : failure location
FAIL! : tst_QWindow::isActive() 'QGuiApplication::focusWindow() == &child' returned FALSE. ()
.\tst_qwindow.cpp(195) : failure location
Remember to enable the test in CI after it has been fixed.
Attachments
Issue Links
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-